--- a/views/layout.html
+++ b/views/layout.html
@@ -13,6 +13,10 @@
     <style>
         body {
             font-family: Arial;
+            background-image: url('https://static.vecteezy.com/system/resources/previews/004/532/221/non_2x/tic-tac-toe-seamless-background-on-dark-blue-illustration-vector.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         /**
