--- a/views/layout.html
+++ b/views/layout.html
@@ -17,7 +17,13 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-        }
+            display: flex;
+            height: 100vh;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            }
+    
 
         /**
         * Default styles for xterm.js
